2010-01-??  Jan Nijtmans  <nijtmans@users.sf.net>

	* generic/tkMenubutton.h:  Eliminate tkpMenubuttonClass
	* generic/tkButton.h       make tkpButtonProcs CONST
	* generic/tkBusy.c:        fix gcc warning: missing initializer
	* generic/tkButton.c
	* generic/tkCanvas.c
	* generic/tkConsole.c
	* generic/tkEntry.c
	* generic/tkFrame.c
	* generic/tkListbox.c
	* generic/tkMenu.c
	* generic/tkMenubutton.c
	* generic/tkMessage.c
	* generic/tkScale.c
	* generic/tkScrollbar.h
	* generic/tkText.c
	* generic/ttk/ttkWidget.c
	* carbon/tkMacOSXButton.c
	* carbon/tkMacOSXMenubutton.c
	* carbon/tkMacOSXScrlbr.c
	* macosx/tkMacOSXButton.c
	* macosx/tkMacOSXMenubutton.c
	* macosx/tkMacOSXScrlbr.c
	* unix/tkUnixButton.c
	* unix/tkUnixMenubu.c
	* unix/tkUnixScrolbr.c
	* win/tkWinButton.c
	* win/tkWinDialog.c
	* win/tkWinEmbed.c
	* win/tkWinFont.c
	* win/tkWinInit.c
	* win/tkWinKey.c
	* win/tkWinScrlbr.c

2010-01-10  Jan Nijtmans  <nijtmans@users.sf.net>

	* doc/SetClassProcs.3:  CONSTify Tk_SetClassProcs
	* generic/tk.decls
	* generic/tkInt.h
	* generic/tkWindow.c
	* generic/tkDecls.h:    (regenerated)
	* unix/tcl.m4           Sync with Tcl version
	* unix/configure        (regenerated)

2010-01-09  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* doc/menu.n:           [TIP 360]: Remove special handling of
	* library/obsolete.tcl: the .help menu on X11.
	* unix/tkUnixMenu.c:

	* library/menu.tcl:      [TIP 360] Make Tk menu activation
	* library/obsolete.tcl:  follow mouse movements.

2010-01-08  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* doc/photo.n: [Bug 2927569] Multiple edits have peverted the
	original meaning of the phrase 'image file data' to reference
	a filename option that does not exist.

2010-01-07  Donal K. Fellows  <dkf@users.sf.net>

	* generic/tkTextDisp.c (AsyncUpdateLineMetrics): [Bug 2677890]: Fix
	odd text widget update problem that had scrollbars being unable to
	cover the whole widget. Fix is to reify the range to update sooner.
